[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[dependencies.clap]
version = "4.5.4"
features = ["std", "derive", "help", "color", "usage", "error-context"]

[dependencies.serenity]
version = "0.12.2"
features = ["client", "gateway", "model", "rustls_backend", "standard_framework"]

[dependencies.tokio]
version = "1.38.0"
features = ["rt-multi-thread"]

[dependencies.reqwest]
version = "0.12.4"
features = ["json"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.serde_with]
version = "3.8.1"

[dependencies.strum]
version = "0.26.2"
features = ["derive"]

[dependencies.chrono]
version = "0.4.38"

[dependencies.futures]
version = "0.3.30"

[profile.release]
lto = true
codegen-units = 1
